--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ function myTime(){
             b = a.getHours();
             c = a.getMinutes();
             d = a.getSeconds();
-            e = a.getDay();
-            f = a.getMonth();
+            e = a.getDay()+1;
+            f = a.getMonth()+1;
             g = a.getFullYear () ;
             
             if(b<= 9){
