--- a/index.html
+++ b/index.html
@@ -5,35 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gebetszeiten</title>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/6a6d6ea2eb.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <style>
         body{
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-family: Arial,Helvetica,sans-serif;
+            overflow: hidden;
+        }
+        .color0{
+            color: #4a4a4a;
         }
         .center{
             display: flex;
             align-items: center;
             justify-content: center;
+            margin: 1vh;
         }
         #zeitbiszumnaechstengebet{
-            color: rgba(128, 128, 128, 0.849);
-            font-size: 10vh;
+            color: #cacaca;
+            font-size: 4em;
+            font-weight: 700;
         }
         #ort{
-            color: rgba(71, 71, 71, 0.849);
-            font-size: 10vh;
+            font-size: 2.9em;
+            font-weight: 700;
         }
         #zeitpunkt{
             color: rgba(0, 0, 0, 0.849);
             font-size: 3.5vh;
         }
         .gebete{
+            margin-top: 5vh;
             align-items:center ;
             justify-content: center;
             display: grid;
             grid-template-columns: 20vh 20vh 20vh 20vh 20vh;
-            grid-gap: 10vh;
+            grid-gap: 8vh;
+            padding-bottom: 10vh;
         }
         .cont{
             align-items:center ;
@@ -43,21 +53,63 @@
             grid-gap: 2vh;
         }
         #gebet{
-            color: rgba(71, 71, 71, 0.849);
-            font-size: 4vh;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            font-size: 1.3em;
+            font-weight: 400;
+            margin-top: 20px;
         }
         .zeit{
-            color: rgba(0, 0, 0, 0.849);
-            font-size: 5vh;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            font-size: 2.9em;
+            font-weight: 700;
+            }
+        .fa-solid, .fa{
+            padding : 6vh;
+        }
+        .header{
+            display: grid;
+            grid-template-columns: 10vw 80vw 10vw;
+            font-size: 3.5vh;
+        }
+        .footer{
+            padding-top: 2vh;
+            font-size: 3vh;
+        }
+        @media screen and (max-width: 780px) {
+            body{
+                overflow: visible;
+            }
+            .gebete{
+            align-items:center ;
+            justify-content: center;
+            display: grid;
+            grid-template-columns: 20vh;
+            grid-gap: 10vh;
+            padding-bottom: 4vh;
+            }
+            .header{
+                display: grid;
+                grid-template-columns: 10vw 70vw 10vw;
+                font-size: 3.5vh;
+            }
         }
     </style>
+<div class="header">
+    <i class="fa-solid fa-mosque color0"></i>
+    <div ></div>
+    <i class="fa-solid fa-location-dot color0"></i>
+</div>
    
-        <h1 id="zeitbiszumnaechstengebet" class="center">00:11:36</h1>
-        <h1 id="ort" class="center">Köln</h1>
-        <h1 id="zeitpunkt" class="center">21.03.2022 13:12:12</h1>
-    <div class="gebete">
-        <div class="cont">
-            <span id="gebet">Fadjr:</span>
+        <h1 id="zeitbiszumnaechstengebet" class="center " style="margin-bottom:5vh;">00:11:36</h1>
+        <h1 id="ort" class="center color0">Köln</h1>
+        <h1 id="zeitpunkt" class="center color0">21.03.2022 13:12:12</h1>
+    <div class="gebete center color0">
+        <div class="cont ">
+            <span id="gebet" >Fadjr:</span>
             <span id="gebetszeit" class="zeit">12:45</span>
         </div>
         <div class="cont">
@@ -77,6 +129,15 @@
             <span id="gebetszeit3" class="zeit">12:45</span>
         </div>
     </div>
+<div class="footer">
+    <div class="center">
+        <a href="https://github.com/SemirSljiivic" target="_blank"><i class="fa fa-github color0" aria-hidden="true" ></i></a>
+        <a href ="https://github.com/SemirSljiivic/Gebetszeiten" target="_blank"><i class="fa-solid fa-code color0"></i></a>
+        <i class="fa-solid fa-moon color0" onclick="changeMode();"></i>
+    </div>
+</div>
+
+    
 
     <script>
         setInterval("myTime()", 1000)
@@ -114,7 +175,7 @@ async function HoleZeit(){
     const data = await response.json();
     const {fajr, dhuhr, asr, maghrib, isha} = data.items[0];
 
-    document.getElementById("gebetszeit").textContent = ZwölfZuVierundzwanzig(fajr);
+    document.getElementById("gebetszeit").textContent = ZwölfZuVierundzwanzig("0"+fajr);
     document.getElementById("gebetszeit0").textContent = ZwölfZuVierundzwanzig(dhuhr);
     document.getElementById("gebetszeit1").textContent = ZwölfZuVierundzwanzig(asr);
     document.getElementById("gebetszeit2").textContent = ZwölfZuVierundzwanzig(maghrib);
@@ -123,6 +184,26 @@ async function HoleZeit(){
 }
  
 HoleZeit();
+var bool0 = true;
+function changeMode(){
+   
+        var obj = document.getElementsByClassName("color0");
+        if(bool0){      
+            for (var i = 0; i < obj.length; i++) {
+            obj[i].style.color = "white";
+            }
+            document.querySelector("body").style.background = "#4a4a4a";
+            bool0 = false;
+        }
+        else{      
+            for (var i = 0; i < obj.length; i++) {
+            obj[i].style.color = "#4a4a4a";
+            }
+            document.querySelector("body").style.background = "white";
+            bool0 = true;
+        }
+    }
+
 
 function myTime(){
             a = new Date();
@@ -166,23 +247,23 @@ function myTime(){
             
             if(fajr1 <  time && dhuhr1 > time){
                 document.getElementById("zeitbiszumnaechstengebet").innerText = MinutenUmwandeln(dhuhr1  - time);
-                document.getElementById("gebetszeit0").style.color = "red";
+                document.getElementById("gebetszeit0").style.color = "#a59573";
             }
             if(dhuhr1 <  time && asr1 > time){
                 document.getElementById("zeitbiszumnaechstengebet").innerText = MinutenUmwandeln(asr1 - time);
-                document.getElementById("gebetszeit1").style.color = "red";
+                document.getElementById("gebetszeit1").style.color = "#a59573";
             }
             if(asr1 <   time && maghrib1 > time){
                 document.getElementById("zeitbiszumnaechstengebet").innerText = MinutenUmwandeln(maghrib1 - time);
-                document.getElementById("gebetszeit2").style.color = "red";
+                document.getElementById("gebetszeit2").style.color = "#a59573";
             }
             if(maghrib1 <   time && isha1 > time){
                 document.getElementById("zeitbiszumnaechstengebet").innerText = MinutenUmwandeln(isha1 - time);
-                document.getElementById("gebetszeit3").style.color = "red";
+                document.getElementById("gebetszeit3").style.color = "#a59573";
             }
             if(isha1 < time){
                 document.getElementById("zeitbiszumnaechstengebet").innerText = MinutenUmwandeln((fajr1 + 24* 60) - time);
-                document.getElementById("gebetszeit").style.color = "red";
+                document.getElementById("gebetszeit").style.color = "#a59573";
             }
         }
 
