--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link data-n-head="ssr" rel="icon" href="https://cdn-icons-png.flaticon.com/512/3426/3426748.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/6a6d6ea2eb.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body onload="initWork()" >
     <style>
         body{
             font-family: Arial,Helvetica,sans-serif;
@@ -108,6 +108,7 @@
         <h1 id="zeitbiszumnaechstengebet" class="center " style="margin-bottom:5vh;">00:11:36</h1>
         <h1 id="ort" class="center color0">Köln</h1>
         <h1 id="zeitpunkt" class="center color0">21.03.2022 13:12:12</h1>
+        <h2 id="today" class="center">  </h2>
     <div class="gebete center color0">
         <div class="cont ">
             <span id="gebet" >Fadjr:</span>
@@ -138,6 +139,17 @@
     </div>
 </div>
 
+<script type="text/javascript" src="Downloads/Hijri.js">
+    type="text/javascript">
+</script>
+
+<script>
+    function initWork() {
+            //Today
+            var todayElement = document.getElementById("today");
+            todayElement.innerHTML = HijriJS.today().toString();
+        }
+        </script>
     
 
     <script>
@@ -300,4 +312,3 @@ function myTime(){
 
 </body>
 </html>
-
