--- a/Gebetetszeiten/index.html
+++ b/Gebetetszeiten/index.html
@@ -108,7 +108,7 @@
         <h1 id="zeitbiszumnaechstengebet" class="center " style="margin-bottom:5vh;">00:11:36</h1>
         <h1 id="ort" class="center color0">Köln</h1>
         <h1 id="zeitpunkt" class="center color0">21.03.2022 13:12:12</h1>
-        <h2 id="today" class="center">  </h2>
+        <h2 id="today" class="center color0">  </h2>
     <div class="gebete center color0">
         <div class="cont ">
             <span id="gebet" >Fadjr:</span>
