--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Köln | Gebetszeiten</title>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="manifest" href="manifest.json">
     <link data-n-head="ssr" rel="icon" href="https://cdn-icons-png.flaticon.com/512/3426/3426748.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/6a6d6ea2eb.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="Hijri.js">type="text/javascript"></script>
